fix toggle button ui on mobile.

--- a/app/assets/stylesheets/master.styl
+++ b/app/assets/stylesheets/master.styl
@@ -2586,8 +2586,9 @@ form
       display: block
       content: '\e83e'
       width: 20px
-      height: 16px
-      padding: 4px 1px 0 2px
+      height: 20px
+      line-height: 20px
+      vertical-align: top
       font-size: 12px
       color: dark-gray
       border-radius: 20px
